--- a/stylesheets/queries.scss
+++ b/stylesheets/queries.scss
@@ -33,8 +33,17 @@
   .section > * {
     zoom: 50%;
     p {
-      zoom: 200%;
+      // zoom: 200%;
+      line-height: 20px;
+      margin-top: -200px;
     }
+    h1 {
+      margin-top: -80px;
+    }
+  }
+
+  #heritage .section > :nth-child(14) > :nth-child(2) {
+    margin-top: -300px;
   }
 
   #collections > *:first-child img,
